// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InteractiveReport Loads report skeleton when mounted 1`] = `
<div
  className=""
>
  <Toolbar
    handleNavFilter={[Function]}
    status="ready"
    updateEmptyDisplayFunc={[Function]}
    updateFilterFunc={[Function]}
    updateTagsDisplayFunc={[Function]}
  />
  <InteractiveNav
    displayEmpty={true}
    displayTags={false}
    filter={null}
    handleNavClick={[Function]}
    handlePlayClick={[Function]}
    report={
      Object {
        "attachments": Object {},
        "case_count": Object {
          "failed": 0,
          "passed": 0,
        },
        "entries": Array [
          Object {
            "case_count": Object {
              "failed": 0,
              "passed": 0,
            },
            "category": "multitest",
            "description": null,
            "entries": Array [
              Object {
                "case_count": Object {
                  "failed": 0,
                  "passed": 0,
                },
                "category": "suite",
                "description": null,
                "entries": Array [
                  Object {
                    "case_count": Object {
                      "failed": 0,
                      "passed": 0,
                    },
                    "description": null,
                    "entries": Array [],
                    "logs": Array [],
                    "name": "testcaseUID",
                    "name_type_index": Set {
                      "testcaseUID|testcase",
                      "SuiteUID|testplan",
                      "MultiTestUID|testplan",
                      "TestplanUID|testplan",
                    },
                    "parent_uids": Array [
                      "TestplanUID",
                      "MultiTestUID",
                      "SuiteUID",
                    ],
                    "status": "ready",
                    "status_override": null,
                    "suite_related": false,
                    "tags": Object {},
                    "tags_index": Object {},
                    "timer": Object {},
                    "type": "TestCaseReport",
                    "uid": "testcaseUID",
                  },
                ],
                "entry_uids": Array [
                  "testcaseUID",
                ],
                "fix_spec_path": null,
                "name": "SuiteUID",
                "name_type_index": Set {
                  "SuiteUID|testplan",
                  "MultiTestUID|testplan",
                  "TestplanUID|testplan",
                  "testcaseUID|testcase",
                },
                "parent_uids": Array [
                  "TestplanUID",
                  "MultiTestUID",
                ],
                "part": null,
                "status": "ready",
                "status_override": null,
                "tags": Object {},
                "tags_index": Object {},
                "timer": Object {},
                "uid": "SuiteUID",
              },
            ],
            "entry_uids": Array [
              "SuiteUID",
            ],
            "fix_spec_path": null,
            "name": "MultiTestUID",
            "name_type_index": Set {
              "MultiTestUID|testplan",
              "TestplanUID|testplan",
              "SuiteUID|testplan",
              "testcaseUID|testcase",
            },
            "parent_uids": Array [
              "TestplanUID",
            ],
            "part": null,
            "status": "ready",
            "status_override": null,
            "tags": Object {},
            "tags_index": Object {},
            "timer": Object {},
            "uid": "MultiTestUID",
          },
        ],
        "entry_uids": Array [
          "MultiTestUID",
        ],
        "meta": Object {},
        "name": "TestplanUID",
        "name_type_index": Set {
          "TestplanUID|testplan",
          "MultiTestUID|testplan",
          "SuiteUID|testplan",
          "testcaseUID|testcase",
        },
        "parent_uids": Array [],
        "status": "ready",
        "status_override": null,
        "tags_index": Object {},
        "timer": Object {},
        "uid": "TestplanUID",
      }
    }
    selected={
      Array [
        Object {
          "type": "testplan",
          "uid": "TestplanUID",
        },
      ]
    }
  />
  <Message
    left={18}
    message="Please select a testcase."
  />
</div>
`;

exports[`InteractiveReport handles individual test suites being run 1`] = `
<div
  className=""
>
  <Toolbar
    handleNavFilter={[Function]}
    status="ready"
    updateEmptyDisplayFunc={[Function]}
    updateFilterFunc={[Function]}
    updateTagsDisplayFunc={[Function]}
  />
  <InteractiveNav
    displayEmpty={true}
    displayTags={false}
    filter={null}
    handleNavClick={[Function]}
    handlePlayClick={[Function]}
    report={
      Object {
        "attachments": Object {},
        "category": "testplan",
        "entries": Array [
          Object {
            "category": "multitest",
            "description": null,
            "entries": Array [
              Object {
                "category": "suite",
                "description": null,
                "entries": Array [
                  Object {
                    "description": null,
                    "entries": Array [],
                    "logs": Array [],
                    "name": "testcaseName",
                    "parent_uids": Array [
                      "TestplanUID",
                      "MultiTestUID",
                      "SuiteUID",
                    ],
                    "status": "ready",
                    "status_override": null,
                    "suite_related": false,
                    "tags": Object {},
                    "timer": Object {},
                    "type": "TestCaseReport",
                    "uid": "testcaseUID",
                  },
                ],
                "fix_spec_path": null,
                "name": "SuiteName",
                "parent_uids": Array [
                  "TestplanUID",
                  "MultiTestUID",
                ],
                "part": null,
                "status": "ready",
                "status_override": null,
                "tags": Object {},
                "timer": Object {},
                "type": "TestGroupReport",
                "uid": "SuiteUID",
              },
            ],
            "fix_spec_path": null,
            "name": "MultiTestName",
            "parent_uids": Array [
              "TestplanUID",
            ],
            "part": null,
            "status": "ready",
            "status_override": null,
            "tags": Object {},
            "timer": Object {},
            "type": "TestGroupReport",
            "uid": "MultiTestUID",
          },
        ],
        "meta": Object {},
        "name": "TestplanName",
        "parent_uids": Array [],
        "status": "ready",
        "status_override": null,
        "tags_index": Object {},
        "timer": Object {},
        "type": "TestGroupReport",
        "uid": "TestplanUID",
      }
    }
    selected={
      Array [
        Object {
          "type": "testplan",
          "uid": "TestplanUID",
        },
      ]
    }
  />
  <Message
    left={18}
    message="Please select a testcase."
  />
</div>
`;

exports[`InteractiveReport handles individual testcases being run 1`] = `
<div
  className=""
>
  <Toolbar
    handleNavFilter={[Function]}
    status="ready"
    updateEmptyDisplayFunc={[Function]}
    updateFilterFunc={[Function]}
    updateTagsDisplayFunc={[Function]}
  />
  <InteractiveNav
    displayEmpty={true}
    displayTags={false}
    filter={null}
    handleNavClick={[Function]}
    handlePlayClick={[Function]}
    report={
      Object {
        "attachments": Object {},
        "category": "testplan",
        "entries": Array [
          Object {
            "category": "multitest",
            "description": null,
            "entries": Array [
              Object {
                "category": "suite",
                "description": null,
                "entries": Array [
                  Object {
                    "case_count": Object {
                      "failed": 0,
                      "passed": 0,
                    },
                    "description": null,
                    "entry_uids": Array [],
                    "logs": Array [],
                    "name": "testcaseName",
                    "name_type_index": Set {
                      "testcaseName|testcase",
                    },
                    "parent_uids": Array [
                      "TestplanUID",
                      "MultiTestUID",
                      "SuiteUID",
                    ],
                    "status": "running",
                    "status_override": null,
                    "suite_related": false,
                    "tags": Object {},
                    "tags_index": Object {},
                    "timer": Object {},
                    "type": "TestCaseReport",
                    "uid": "testcaseUID",
                  },
                ],
                "fix_spec_path": null,
                "name": "SuiteName",
                "parent_uids": Array [
                  "TestplanUID",
                  "MultiTestUID",
                ],
                "part": null,
                "status": "ready",
                "status_override": null,
                "tags": Object {},
                "timer": Object {},
                "type": "TestGroupReport",
                "uid": "SuiteUID",
              },
            ],
            "fix_spec_path": null,
            "name": "MultiTestName",
            "parent_uids": Array [
              "TestplanUID",
            ],
            "part": null,
            "status": "ready",
            "status_override": null,
            "tags": Object {},
            "timer": Object {},
            "type": "TestGroupReport",
            "uid": "MultiTestUID",
          },
        ],
        "meta": Object {},
        "name": "TestplanName",
        "parent_uids": Array [],
        "status": "ready",
        "status_override": null,
        "tags_index": Object {},
        "timer": Object {},
        "type": "TestGroupReport",
        "uid": "TestplanUID",
      }
    }
    selected={
      Array [
        Object {
          "type": "testplan",
          "uid": "TestplanUID",
        },
      ]
    }
  />
  <Message
    left={18}
    message="Please select a testcase."
  />
</div>
`;

exports[`InteractiveReport handles navigation entries being clicked 1`] = `
<div
  className=""
>
  <Toolbar
    handleNavFilter={[Function]}
    status="ready"
    updateEmptyDisplayFunc={[Function]}
    updateFilterFunc={[Function]}
    updateTagsDisplayFunc={[Function]}
  />
  <InteractiveNav
    displayEmpty={true}
    displayTags={false}
    filter={null}
    handleNavClick={[Function]}
    handlePlayClick={[Function]}
    report={
      Object {
        "attachments": Object {},
        "category": "testplan",
        "entries": Array [
          Object {
            "category": "multitest",
            "description": null,
            "entries": Array [
              Object {
                "category": "suite",
                "description": null,
                "entries": Array [
                  Object {
                    "description": null,
                    "entries": Array [],
                    "logs": Array [],
                    "name": "testcaseName",
                    "parent_uids": Array [
                      "TestplanUID",
                      "MultiTestUID",
                      "SuiteUID",
                    ],
                    "status": "ready",
                    "status_override": null,
                    "suite_related": false,
                    "tags": Object {},
                    "timer": Object {},
                    "type": "TestCaseReport",
                    "uid": "testcaseUID",
                  },
                ],
                "fix_spec_path": null,
                "name": "SuiteName",
                "parent_uids": Array [
                  "TestplanUID",
                  "MultiTestUID",
                ],
                "part": null,
                "status": "ready",
                "status_override": null,
                "tags": Object {},
                "timer": Object {},
                "type": "TestGroupReport",
                "uid": "SuiteUID",
              },
            ],
            "fix_spec_path": null,
            "name": "MultiTestName",
            "parent_uids": Array [
              "TestplanUID",
            ],
            "part": null,
            "status": "ready",
            "status_override": null,
            "tags": Object {},
            "timer": Object {},
            "type": "TestGroupReport",
            "uid": "MultiTestUID",
          },
        ],
        "meta": Object {},
        "name": "TestplanName",
        "parent_uids": Array [],
        "status": "ready",
        "status_override": null,
        "tags_index": Object {},
        "timer": Object {},
        "type": "TestGroupReport",
        "uid": "TestplanUID",
      }
    }
    selected={
      Array [
        Object {
          "type": "testplan",
          "uid": "TestplanUID",
        },
        Object {
          "type": "multitest",
          "uid": "MultiTestUID",
        },
      ]
    }
  />
  <Message
    left={18}
    message="Please select a testcase."
  />
</div>
`;

exports[`InteractiveReport handles tests being run 1`] = `
<div
  className=""
>
  <Toolbar
    handleNavFilter={[Function]}
    status="ready"
    updateEmptyDisplayFunc={[Function]}
    updateFilterFunc={[Function]}
    updateTagsDisplayFunc={[Function]}
  />
  <InteractiveNav
    displayEmpty={true}
    displayTags={false}
    filter={null}
    handleNavClick={[Function]}
    handlePlayClick={[Function]}
    report={
      Object {
        "attachments": Object {},
        "category": "testplan",
        "entries": Array [
          Object {
            "category": "multitest",
            "description": null,
            "entries": Array [
              Object {
                "category": "suite",
                "description": null,
                "entries": Array [
                  Object {
                    "description": null,
                    "entries": Array [],
                    "logs": Array [],
                    "name": "testcaseName",
                    "parent_uids": Array [
                      "TestplanUID",
                      "MultiTestUID",
                      "SuiteUID",
                    ],
                    "status": "ready",
                    "status_override": null,
                    "suite_related": false,
                    "tags": Object {},
                    "timer": Object {},
                    "type": "TestCaseReport",
                    "uid": "testcaseUID",
                  },
                ],
                "fix_spec_path": null,
                "name": "SuiteName",
                "parent_uids": Array [
                  "TestplanUID",
                  "MultiTestUID",
                ],
                "part": null,
                "status": "ready",
                "status_override": null,
                "tags": Object {},
                "timer": Object {},
                "type": "TestGroupReport",
                "uid": "SuiteUID",
              },
            ],
            "fix_spec_path": null,
            "name": "MultiTestName",
            "parent_uids": Array [
              "TestplanUID",
            ],
            "part": null,
            "status": "ready",
            "status_override": null,
            "tags": Object {},
            "timer": Object {},
            "type": "TestGroupReport",
            "uid": "MultiTestUID",
          },
        ],
        "meta": Object {},
        "name": "TestplanName",
        "parent_uids": Array [],
        "status": "ready",
        "status_override": null,
        "tags_index": Object {},
        "timer": Object {},
        "type": "TestGroupReport",
        "uid": "TestplanUID",
      }
    }
    selected={
      Array [
        Object {
          "type": "testplan",
          "uid": "TestplanUID",
        },
      ]
    }
  />
  <Message
    left={18}
    message="Please select a testcase."
  />
</div>
`;
